# aoc2024

./: README.md  aoc2024.cabal  fetch.sh  flake.nix
lib/: AoC.hs
src/: Day01.hs  Day04.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4Alt.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  P1.hs  P2.hs
