cabal-version: 3.0
name:          aoc2024
version:       0.1.0.0
license:       BSD-3-Clause
author:        Amneesh
maintainer:    natto@weirdnatto.in
build-type:    Simple

common common
  ghc-options:        -Wall -O3
  default-extensions:
    LambdaCase
    TupleSections
    ViewPatterns
    MultiWayIf

  build-depends:
    , base    >=4.14 && <5
    , parsec  >=3

library libaoc
  import:          common
  exposed:         False
  hs-source-dirs:  lib
  exposed-modules: AoC

executable day1
  import:         common
  hs-source-dirs: src
  main-is:        Day1.hs
  build-depends:  libaoc

executable day2
  import:         common
  hs-source-dirs: src
  main-is:        Day2.hs
  build-depends:  libaoc

executable day3
  import:         common
  hs-source-dirs: src
  main-is:        Day3.hs
  build-depends:  libaoc

executable day4
  import:         common
  hs-source-dirs: src
  main-is:        Day4.hs
  build-depends:  libaoc

executable day4alt
  import:         common
  hs-source-dirs: src
  main-is:        Day4Alt.hs
  build-depends:  libaoc

executable day5
  import:         common
  hs-source-dirs: src
  main-is:        Day5.hs
  build-depends:
    , containers
    , libaoc

executable day6
  import:         common
  hs-source-dirs: src
  main-is:        Day6.hs
  build-depends:  containers

executable day7
  import:         common
  hs-source-dirs: src
  main-is:        Day7.hs
  build-depends:  libaoc

executable day8
  import:         common
  hs-source-dirs: src
  main-is:        Day8.hs
  build-depends:  containers

executable day9
  import:         common
  hs-source-dirs: src
  main-is:        Day9.hs
  build-depends:  containers

executable day10
  import:         common
  hs-source-dirs: src
  main-is:        Day10.hs
  build-depends:  containers

executable day11
  import:         common
  hs-source-dirs: src
  main-is:        Day11.hs
  build-depends:  containers

executable day12
  import:         common
  hs-source-dirs: src
  main-is:        Day12.hs
  build-depends:  containers

executable day13
  import:         common
  hs-source-dirs: src
  main-is:        Day13.hs
  build-depends:  libaoc

executable day14
  import:         common
  hs-source-dirs: src
  main-is:        Day14.hs
  build-depends:
    , containers
    , libaoc

executable day15
  import:         common
  hs-source-dirs: src
  main-is:        Day15.hs
  build-depends:  containers

executable day16
  import:         common
  hs-source-dirs: src
  main-is:        Day16.hs
  build-depends:  containers

executable day17
  import:         common
  hs-source-dirs: src
  main-is:        Day17.hs
  build-depends:  libaoc
