cabal-version: 3.0
name:          aoc2024
version:       0.1.0.0
license:       BSD-3-Clause
author:        Amneesh
maintainer:    natto@weirdnatto.in
build-type:    Simple

common common
  ghc-options:        -Wall -O3
  default-extensions:
    LambdaCase
    MultiWayIf
    TupleSections
    ViewPatterns

  build-depends:
    , base    >=4.14 && <5
    , parsec  >=3

library libaoc
  import:          common
  exposed:         False
  hs-source-dirs:  lib
  exposed-modules: AoC

executable day01
  import:         common
  hs-source-dirs: src
  main-is:        Day01.hs
  build-depends:  libaoc

executable day02
  import:         common
  hs-source-dirs: src
  main-is:        Day02.hs
  build-depends:  libaoc

executable day03
  import:         common
  hs-source-dirs: src
  main-is:        Day03.hs
  build-depends:  libaoc

executable day04
  import:         common
  hs-source-dirs: src
  main-is:        Day04.hs
  build-depends:  libaoc

executable day04alt
  import:         common
  hs-source-dirs: src
  main-is:        Day04Alt.hs
  build-depends:  libaoc

executable day05
  import:         common
  hs-source-dirs: src
  main-is:        Day05.hs
  build-depends:
    , containers
    , libaoc

executable day06
  import:         common
  hs-source-dirs: src
  main-is:        Day06.hs
  build-depends:  containers

executable day07
  import:         common
  hs-source-dirs: src
  main-is:        Day07.hs
  build-depends:  libaoc

executable day08
  import:         common
  hs-source-dirs: src
  main-is:        Day08.hs
  build-depends:  containers

executable day09
  import:         common
  hs-source-dirs: src
  main-is:        Day09.hs
  build-depends:  containers

executable day10
  import:         common
  hs-source-dirs: src
  main-is:        Day10.hs
  build-depends:  containers

executable day11
  import:         common
  hs-source-dirs: src
  main-is:        Day11.hs
  build-depends:  containers

executable day12
  import:         common
  hs-source-dirs: src
  main-is:        Day12.hs
  build-depends:  containers

executable day13
  import:         common
  hs-source-dirs: src
  main-is:        Day13.hs
  build-depends:  libaoc

executable day14
  import:         common
  hs-source-dirs: src
  main-is:        Day14.hs
  build-depends:
    , containers
    , libaoc

executable day15
  import:         common
  hs-source-dirs: src
  main-is:        Day15.hs
  build-depends:  containers

executable day16
  import:         common
  hs-source-dirs: src
  main-is:        Day16.hs
  build-depends:  containers

executable day17
  import:         common
  hs-source-dirs: src
  main-is:        Day17.hs
  build-depends:  libaoc

executable day18
  import:         common
  hs-source-dirs: src
  main-is:        Day18.hs
  build-depends:
    , containers
    , libaoc

executable day19
  import:         common
  hs-source-dirs: src
  main-is:        Day19.hs
  build-depends:
    , array
    , containers
    , libaoc

executable day20
  import:         common
  hs-source-dirs: src
  main-is:        Day20.hs
  build-depends:  containers

executable day21
  import:         common
  hs-source-dirs: src
  main-is:        Day21.hs
  build-depends:  containers

executable day22
  import:         common
  hs-source-dirs: src
  main-is:        Day22.hs
  build-depends:  containers

executable day23
  import:         common
  hs-source-dirs: src
  main-is:        Day23.hs
  build-depends:  containers

executable day24
  import:         common
  hs-source-dirs: src
  main-is:        Day24.hs
  build-depends:
    , containers
    , libaoc

executable day25
  import:         common
  hs-source-dirs: src
  main-is:        Day25.hs
